syntax = "proto3";
package ubii.sessions;

import "proto/sessions/interactionInputMapping.proto";
import "proto/sessions/interactionOutputMapping.proto";

message IOMapping {
    string interaction_id = 1;
    repeated ubii.sessions.InteractionInputMapping input_mappings = 2;
    repeated ubii.sessions.InteractionOutputMapping output_mappings = 3;
}

message IOMappingList {
    repeated ubii.sessions.IOMapping elements = 1;
}